--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>Test page </h1>
+<html>
+    <head>
+    <title>Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    </head>
+    <body>
+        <main>
+            <header>
+            	<section>
+            		<!-- <h1 style="background:#CCC;">Title Title </h1> -->
+            		<div>
+	            		<div>
+	            		</div>
+            		</div>
+            	</section>
+            </header>
+            <div class="timelineCont">
+            	<ul>
+            		<li></li>
+            		<li>1</li>
+            		<li>Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far.</li>
+            		<li>3</li>
+            		<li>4</li>
+            		<li>Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far.</li>
+            		<li>6</li>
+            		<li>7</li>
+            		<li>Think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't</li>
+            		<li>9</li>
+            		<li>10</li>
+            		<li></li>
+            	</ul>
+            </div>
+            <footer>footer</footer>
+        </main>
+    </body>
+</html>
