header and footer fixed

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
         <main>
             <header>
             	<section>
-            		<!-- <h1 style="background:#CCC;">Title Title </h1> -->
-            		<div>
-	            		<div>
-	            		</div>
-            		</div>
+            		<aside>
+                        <span>
+                        </span>
+                        <h1>Hello!, I am Designer & Developer.
+                            <span>I create EXPERIENCE</span>
+                        </h1>
+                    </aside>
             	</section>
             </header>
             <div class="timelineCont">
