header title text update

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             		<aside>
                         <span>
                         </span>
-                        <h1>Hello!, I am Designer & Developer.
-                            <span>I create EXPERIENCE</span>
+                        <h1>Hello! I am Designer & Developer.
+                            <span>I create awesometically better EXPERIENCE for your business</span>
                         </h1>
                     </aside>
             	</section>
