google font update & footer fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         <span>
                         </span>
                         <h1>Hello! I am Designer & Developer.
-                            <span>I create awesometically better EXPERIENCE for your business</span>
+                            <span>I create awesomaticaly better EXPERIENCE for your business</span>
                         </h1>
                     </aside>
             	</section>
@@ -22,7 +22,7 @@
             	<ul>
             		<li></li>
             		<li>1</li>
-            		<li>Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far.</li>
+            		<li>Yes it is possible, although I don't think <a href="#">anyone</a> will want to just google it and research for you without any evidence of what you have tried so far.</li>
             		<li>3</li>
             		<li>4</li>
             		<li>Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far.</li>
