multi device support fixes

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <div class="timelineCont">
             	<ul>
             		<li></li>
-            		<li>1</li>
-            		<li>Yes it is possible, although I don't think <a href="#">anyone</a> will want to just google it and research for you without any evidence of what you have tried so far.</li>
-            		<li>3</li>
-            		<li>4</li>
-            		<li>Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far.</li>
-            		<li>6</li>
-            		<li>7</li>
-            		<li>Think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't</li>
-            		<li>9</li>
-            		<li>10</li>
+            		<li><span>4321</span>1</li>
+            		<li><span>4321</span>Yes it is possible, although I don't think <a href="#">anyone</a> will want to just google it and research for you without any evidence of what you have tried so far.</li>
+            		<li><span>4321</span>3</li>
+            		<li><span>4321</span>4</li>
+            		<li><span>4321</span>Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't think anyone will want to just google it and research for you without any evidence of what you have tried so far.</li>
+            		<li><span>4321</span>6</li>
+            		<li><span>4321</span>7</li>
+            		<li><span>4321</span>Think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't</li>
+            		<li><span>4321</span>9</li>
+            		<li><span>4321</span>10</li>
             		<li></li>
             	</ul>
             </div>
