Header subtitle update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         <span>
                         </span>
                         <h1>Hello! I am Designer & Developer.
-                            <span>I create awesomaticaly better EXPERIENCE for your business</span>
+                            <span>I create awesome EXPERIENCE for your online presence</span>
                         </h1>
                     </aside>
             	</section>
