--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         <span>
                         </span>
                         <h1>Hello! I am Designer & Developer.
-                            <span>I create awesome EXPERIENCE for your online presence</span>
+                            <span>I create awesome EXPERIENCE for your online presence.</span>
                         </h1>
                     </aside>
             	</section>
@@ -39,6 +39,13 @@
             		<li>
                         <span>2014</span>
                         In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
+                        <ul> 
+                            <li>Mauris at justo vitae tortor malesuada placerat in vitae arcu. </li>
+                            <li>Nam aliquam est et fringilla euismod. </li>
+                            <li>Mauris aliquet augue at tempor blandit. </li>
+                            <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
+                            <li>Sed faucibus magna tempor dolor auctor finibus. </li>
+                        </ul>
                     </li>
             		<li>
                         <span>2013</span>
@@ -54,7 +61,6 @@
                         <ul> 
                             <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
                             <li>Sed faucibus magna tempor dolor auctor finibus. </li>
-                            <li>Mauris at justo vitae tortor malesuada <a href="#">placerat</a> in vitae arcu. </li>
                             <li>Nam aliquam est et fringilla euismod. </li>
                             <li>Mauris aliquet augue at tempor blandit. </li>
                         </ul>
@@ -70,6 +76,10 @@
             		<li>
                         <span>2008</span>
                         The wise man therefore always holds in these <a href="#">matters to this principle</a> of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
+                        <ul> 
+                            <li>Mauris at justo vitae tortor malesuada placerat in vitae arcu. </li>
+                            <li>Nam aliquam est et fringilla euismod. </li>
+                        </ul>
                     </li>
                     <li>
                         <span>2007</span>
