Included short description and related CSS fixes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                         </span>
                         <h1>Hello! I am Designer & Developer.
                             <span>I create awesome EXPERIENCE for your online presence.</span>
+                            <section>Depending on your skills and your experience, CSS coding can sometimes become a nightmare, particularly if you aren't sure which selectors are actually being applied to document elements.</section>
                         </h1>
                     </aside>
             	</section>
