Month included, dummy content updated, print style fixed

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </header>
             <div class="timelineCont">
             	<ul>
-            		<li></li>
+            		<li><!-- Intentionally left blank for timeline positioning --></li>
             		<li class="clearfix">
-                        <span>2016</span>
+                        <span>Jan 2016<br> - <br>Dec 2015</span>
                         On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain.
                         <ul> 
                             <li>Mauris at justo vitae tortor malesuada placerat in vitae arcu. </li>
@@ -34,11 +34,11 @@
                         </ul>
                     </li>
             		<li>
-                        <span>2015</span>
-                        Yes it is possible, although I don't think <a href="#">anyone</a> will want to just google it and research for you without any evidence of what you have tried so far.
+                        <span>Jul 2015<br> - <br>Sep 2014</span>
+                        Yes it is possible, although I don't think <a href="#">anyone</a> will want to just google it and research for you without any evidence of what you have tried so far. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
                     </li>
             		<li>
-                        <span>2014</span>
+                        <span>Feb 2014<br> - <br>Feb 2013</span>
                         In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
                         <ul> 
                             <li>Mauris at justo vitae tortor malesuada placerat in vitae arcu. </li>
@@ -49,15 +49,21 @@
                         </ul>
                     </li>
             		<li>
-                        <span>2013</span>
+                        <span>May 2013<br> - <br>Dec 2012</span>
                         In certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects <a href="#">pleasures</a> to secure other greater pleasures, or else he endures pains to avoid worse pains.
+                        <ul> 
+                            <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
+                            <li>Sed faucibus magna tempor dolor auctor finibus. </li>
+                            <li>Nam aliquam est et fringilla euismod. </li>
+                            <li>Mauris aliquet augue at tempor blandit. </li>
+                        </ul>
                     </li>
             		<li>
-                        <span>2012</span>
-                        Duis gravida metus massa, sed egestas magna faucibus non. Nulla semper egestas sapien, ut suscipit lectus suscipit vel. Morbi urna quam, suscipit et eros id, <a href="#">ultrices viverra mauris</a>. Nulla justo est, dictum non aliquet nec, bibendum vel tortor. Morbi imperdiet neque non gravida laoreet.
+                        <span>Mar 2012<br> - <br>Nov 2011</span>
+                        Duis gravida metus massa, sed egestas magna faucibus non. Nulla semper egestas sapien, ut suscipit lectus suscipit vel. Morbi urna quam, suscipit et eros id, <a href="#">ultrices viverra mauris</a>. Nulla justo est, dictum non aliquet nec, bibendum vel tortor. Morbi imperdiet neque non gravida laoreet. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
                     </li>
             		<li>
-                        <span>2011</span>
+                        <span>Jan 2011<br> - <br>Oct 2010</span>
                         Nulla justo est, dictum non aliquet nec, bibendum vel tortor. Morbi imperdiet neque non gravida laoreet.
                         <ul> 
                             <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
@@ -67,15 +73,21 @@
                         </ul>
                     </li>
             		<li>
-                        <span>2010</span>
-                        Think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't
+                        <span>Aug 2010<br> - <br>Apr 2009</span>
+                        Think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
+                        <ul> 
+                            <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
+                            <li>Sed faucibus magna tempor dolor auctor finibus. </li>
+                            <li>Nam aliquam est et fringilla euismod. </li>
+                            <li>Mauris aliquet augue at tempor blandit. </li>
+                        </ul>
                     </li>
             		<li>
-                        <span>2009</span>
+                        <span>Apr 2009<br> - <br>Sep 2008</span>
                         When our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be <a href="#">repudiated</a> and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
                     </li>
             		<li>
-                        <span>2008</span>
+                        <span>Sep 2008<br> - <br>Sep 2007</span>
                         The wise man therefore always holds in these <a href="#">matters to this principle</a> of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
                         <ul> 
                             <li>Mauris at justo vitae tortor malesuada placerat in vitae arcu. </li>
@@ -83,10 +95,16 @@
                         </ul>
                     </li>
                     <li>
-                        <span>2007</span>
+                        <span>Jan 2007<br> - <br>Feb 2006</span>
                         Duis gravida metus massa, sed <a href="#">egestas magna</a> faucibus non. Nulla semper egestas sapien, ut suscipit lectus suscipit vel. Morbi urna quam, suscipit et eros id, ultrices viverra mauris. Nulla justo est, dictum non aliquet nec, bibendum vel tortor. Morbi imperdiet neque non gravida laoreet.
+                        <ul> 
+                            <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
+                            <li>Sed faucibus magna tempor dolor auctor finibus. </li>
+                            <li>Nam aliquam est et fringilla euismod. </li>
+                            <li>Mauris aliquet augue at tempor blandit. </li>
+                        </ul>
                     </li>
-            		<li></li>
+            		<li><!-- Intentionally left blank for timeline positioning --></li>
             	</ul>
             </div>
             <footer>footer</footer>
