footer print text

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             		<li><!-- Intentionally left blank for timeline positioning --></li>
             	</ul>
             </div>
-            <footer>footer</footer>
+            <footer></footer>
         </main>
     </body>
 </html>
