--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <html>
     <head>
-    <title>Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <title>Website</title>
+    <!--Web crawler settings(IMPORTANT) -->
+        <meta name="author" content="" />
+        <meta name="description" content="" />
+    <!-- Google webmaster/SEO authentication http://google.com/webmasters -->
+        <meta name="google-site-verification" content="" />
+    <!-- Site owner details -->
+        <meta name="Copyright" content="" />
+    <!--Mobile device viewport setting-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Twitter card setting https://dev.twitter.com/docs/cards/types/summary-card-->
+        <meta name="twitter:card" content="">
+        <meta name="twitter:site" content="">
+        <meta name="twitter:title" content="">
+        <meta name="twitter:description" content="">
+        <meta name="twitter:url" content="">
+    <!-- Open Graph protocol for Facebook share http://ogp.me/ for details -->
+        <meta property="og:title" content="" />
+        <meta property="og:description" content="" />
+        <meta property="og:url" content="" />
+        <meta property="og:image" content="" />
+        <meta property="og:type" content="website" />
+    <!--Microsoft site enhancements https://msdn.microsoft.com/en-us/library/bg183312(v=vs.85).aspx-->
+        <meta name="application-name" content="" /> <!--Enter Portfolio name-->
+        <meta name="msapplication-TileColor" content="" /> <!--Tile color-->
+        <meta name="msapplication-square70x70logo" content="" /> <!--Small tile url/image-->
+        <meta name="msapplication-square150x150logo" content="" /> <!--Medium tile url/image-->
+        <meta name="msapplication-wide310x150logo" content="i" /> <!--Wide tile url/image-->
+        <meta name="msapplication-square310x310logo" content="" /> <!--Large tile url/image-->
+        <meta name="msapplication-notification" content="frequency=30; polling-uri=notifications/contoso1.xml; polling-uri2=notifications/contoso2.xml; polling-uri3=notifications/contoso3.xml" /> <!--Notification polling frequency, can define upto 5 urls https://msdn.microsoft.com/en-us/library/dn255024(v=vs.85).aspx#msapplication-notification-->
+    <!--Global CSS style-->
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
         <main>
@@ -107,7 +136,17 @@
             		<li><!-- Intentionally left blank for timeline positioning --></li>
             	</ul>
             </div>
-            <footer></footer>
+            <footer>Copyright your name or portfolio website url comes here &copy; 201X. All Rights Reserved. <br><br></footer>
         </main>
     </body>
+        <!-- Google analytics snippet. Replace UA-XXXXXX-XX with your site's ID-->
+        <!--<script>
+              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+              ga('create', 'UA-XXXXXX-XX', 'auto');
+              ga('send', 'pageview');
+        </script>-->
 </html>
