--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             		<li><!-- Intentionally left blank for timeline positioning --></li>
             	</ul>
             </div>
-            <footer>Copyright your name or portfolio website url comes here &copy; 201X. All Rights Reserved. <br><br></footer>
+            <footer>Copyright name or <a href="#">portfolio website url</a> comes here &copy; 201(X). All Rights Reserved. <br><br></footer>
         </main>
     </body>
         <!-- Google analytics snippet. Replace UA-XXXXXX-XX with your site's ID-->
