browser specific prefix

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <meta property="og:url" content="" />
         <meta property="og:image" content="" />
         <meta property="og:type" content="website" />
-    <!--Microsoft site enhancements https://msdn.microsoft.com/en-us/library/bg183312(v=vs.85).aspx-->
+    <!-- Microsoft site enhancements https://msdn.microsoft.com/en-us/library/bg183312(v=vs.85).aspx-->
         <meta name="application-name" content="" /> <!--Enter Portfolio name-->
         <meta name="msapplication-TileColor" content="" /> <!--Tile color-->
         <meta name="msapplication-square70x70logo" content="" /> <!--Small tile url/image-->
@@ -31,8 +31,10 @@
         <meta name="msapplication-wide310x150logo" content="i" /> <!--Wide tile url/image-->
         <meta name="msapplication-square310x310logo" content="" /> <!--Large tile url/image-->
         <meta name="msapplication-notification" content="frequency=30; polling-uri=notifications/contoso1.xml; polling-uri2=notifications/contoso2.xml; polling-uri3=notifications/contoso3.xml" /> <!--Notification polling frequency, can define upto 5 urls https://msdn.microsoft.com/en-us/library/dn255024(v=vs.85).aspx#msapplication-notification-->
-    <!--Global CSS style-->
+    <!-- Global CSS style-->
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <!--For multi browser css prefix support -->
+        <script type="text/javascript" src="js/prefixfree.min.js"></script>
     </head>
     <body>
         <main>
