short summary/description included

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
             </header>
             <div class="timelineCont">
             	<ul>
-            		<li><!-- Intentionally left blank for timeline positioning --></li>
+            		<li>
+                        <h3>Summary/Description</h3>
+                        Short description about self comes here! when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
+                    </li>
             		<li class="clearfix">
                         <span>Jan 2016 <b>- </b>Dec 2015</span>
                         On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain.
