Summary/description related fix, footer:after content fix

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             		<aside>
                         <span>
                         </span>
-                        <h1>Hello! I am Designer & Developer.
+                        <h1>Hello! I am Mavles, Designer &amp; Developer.
                             <span>I create awesome EXPERIENCE for your online presence.</span>
                             <section>Depending on your skills and your experience, CSS coding can sometimes become a nightmare, particularly if you aren't sure which selectors are actually being applied to document elements.</section>
                         </h1>
