META description update

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <meta property="og:image" content="" />
         <meta property="og:type" content="website" />
     <!-- Microsoft site enhancements https://msdn.microsoft.com/en-us/library/bg183312(v=vs.85).aspx-->
-        <meta name="application-name" content="" /> <!--Enter Portfolio name-->
-        <meta name="msapplication-TileColor" content="" /> <!--Tile color-->
+        <meta name="application-name" content="" /> <!--Enter display/portfolio name-->
+        <meta name="msapplication-TileColor" content="" /> <!--Tile color in HEX color code-->
         <meta name="msapplication-square70x70logo" content="" /> <!--Small tile url/image-->
         <meta name="msapplication-square150x150logo" content="" /> <!--Medium tile url/image-->
         <meta name="msapplication-wide310x150logo" content="i" /> <!--Wide tile url/image-->
