--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <!--Mobile device viewport setting-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Twitter card setting https://dev.twitter.com/docs/cards/types/summary-card-->
+    <!--Twitter card setting https://dev.twitter.com/docs/cards/types/summary-card-->
         <meta name="twitter:card" content="">
         <meta name="twitter:site" content="">
         <meta name="twitter:title" content="">
         <meta name="twitter:description" content="">
         <meta name="twitter:url" content="">
-    <!-- Open Graph protocol for Facebook share http://ogp.me/ for details -->
+    <!--Open Graph protocol for Facebook share http://ogp.me/ for details -->
         <meta property="og:title" content="" />
         <meta property="og:description" content="" />
         <meta property="og:url" content="" />
         <meta property="og:image" content="" />
         <meta property="og:type" content="website" />
-    <!-- Microsoft site enhancements https://msdn.microsoft.com/en-us/library/bg183312(v=vs.85).aspx-->
+    <!--Microsoft site enhancements https://msdn.microsoft.com/en-us/library/bg183312(v=vs.85).aspx-->
         <meta name="application-name" content="" /> <!--Enter display/portfolio name-->
         <meta name="msapplication-TileColor" content="" /> <!--Tile color in HEX color code-->
         <meta name="msapplication-square70x70logo" content="" /> <!--Small tile url/image-->
@@ -31,7 +31,7 @@
         <meta name="msapplication-wide310x150logo" content="i" /> <!--Wide tile url/image-->
         <meta name="msapplication-square310x310logo" content="" /> <!--Large tile url/image-->
         <meta name="msapplication-notification" content="frequency=30; polling-uri=notifications/contoso1.xml; polling-uri2=notifications/contoso2.xml; polling-uri3=notifications/contoso3.xml" /> <!--Notification polling frequency, can define upto 5 urls https://msdn.microsoft.com/en-us/library/dn255024(v=vs.85).aspx#msapplication-notification-->
-    <!-- Global CSS style-->
+    <!--Global CSS style-->
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!--For multi browser css prefix support -->
         <script type="text/javascript" src="js/prefixfree.min.js"></script>
@@ -57,7 +57,7 @@
                         Short description about self comes here! when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
                     </li>
             		<li class="clearfix">
-                        <span>Jan 2016 <b>- </b>Dec 2015</span>
+                        <span>Jan 2016 Dec 2015</span>
                         On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain.
                         <ul> 
                             <li>Mauris at justo vitae tortor malesuada placerat in vitae arcu. </li>
@@ -68,11 +68,11 @@
                         </ul>
                     </li>
             		<li>
-                        <span>Jul 2015 <b>- </b>Sep 2014</span>
+                        <span>Jul 2015 Sep 2014</span>
                         Yes it is possible, although I don't think <a href="#">anyone</a> will want to just google it and research for you without any evidence of what you have tried so far. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
                     </li>
             		<li>
-                        <span>Feb 2014 <b>- </b>Feb 2013</span>
+                        <span>Feb 2014 Feb 2013</span>
                         In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
                         <ul> 
                             <li>Mauris at justo vitae tortor malesuada placerat in vitae arcu. </li>
@@ -83,7 +83,7 @@
                         </ul>
                     </li>
             		<li>
-                        <span>May 2013 <b>- </b>Dec 2012</span>
+                        <span>May 2013 Dec 2012</span>
                         In certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects <a href="#">pleasures</a> to secure other greater pleasures, or else he endures pains to avoid worse pains.
                         <ul> 
                             <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
@@ -93,11 +93,11 @@
                         </ul>
                     </li>
             		<li>
-                        <span>Mar 2012 <b>- </b>Nov 2011</span>
+                        <span>Mar 2012 Nov 2011</span>
                         Duis gravida metus massa, sed egestas magna faucibus non. Nulla semper egestas sapien, ut suscipit lectus suscipit vel. Morbi urna quam, suscipit et eros id, <a href="#">ultrices viverra mauris</a>. Nulla justo est, dictum non aliquet nec, bibendum vel tortor. Morbi imperdiet neque non gravida laoreet. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
                     </li>
             		<li>
-                        <span>Jan 2011 <b>- </b>Oct 2010</span>
+                        <span>Jan 2011 Oct 2010</span>
                         Nulla justo est, dictum non aliquet nec, bibendum vel tortor. Morbi imperdiet neque non gravida laoreet.
                         <ul> 
                             <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
@@ -107,7 +107,7 @@
                         </ul>
                     </li>
             		<li>
-                        <span>Aug 2010 <b>- </b>Apr 2009</span>
+                        <span>Aug 2010 Apr 2009</span>
                         Think anyone will want to just google it and research for you without any evidence of what you have tried so far. Yes it is possible, although I don't. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided.
                         <ul> 
                             <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
@@ -117,11 +117,11 @@
                         </ul>
                     </li>
             		<li>
-                        <span>Apr 2009 <b>- </b>Sep 2008</span>
+                        <span>Apr 2009 Sep 2008</span>
                         When our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be <a href="#">repudiated</a> and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
                     </li>
             		<li>
-                        <span>Sep 2008 <b>- </b>Sep 2007</span>
+                        <span>Sep 2008 Sep 2007</span>
                         The wise man therefore always holds in these <a href="#">matters to this principle</a> of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
                         <ul> 
                             <li>Mauris at justo vitae tortor malesuada placerat in vitae arcu. </li>
@@ -129,7 +129,7 @@
                         </ul>
                     </li>
                     <li>
-                        <span>Jan 2007 <b>- </b>Feb 2006</span>
+                        <span>Jan 2007 Feb 2006</span>
                         Duis gravida metus massa, sed <a href="#">egestas magna</a> faucibus non. Nulla semper egestas sapien, ut suscipit lectus suscipit vel. Morbi urna quam, suscipit et eros id, ultrices viverra mauris. Nulla justo est, dictum non aliquet nec, bibendum vel tortor. Morbi imperdiet neque non gravida laoreet.
                         <ul> 
                             <li>Vestibulum dignissim libero a leo pellentesque sollicitudin. </li>
@@ -141,7 +141,8 @@
             		<li><!-- Intentionally left blank for timeline positioning --></li>
             	</ul>
             </div>
-            <footer>Copyright name or <a href="#">portfolio website url</a> comes here &copy; 201(X). All Rights Reserved.</footer>
+            <footer>Copyright to <a href="#">name</a> or <a href="#">portfolio website url</a> comes here &copy; 201(X). All Rights Reserved.
+            </footer>
         </main>
     </body>
         <!-- Google analytics snippet. Replace UA-XXXXXX-XX with your site's ID-->
