--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             		<li><!-- Intentionally left blank for timeline positioning --></li>
             	</ul>
             </div>
-            <footer>Copyright to <a href="#">name</a> or <a href="#">portfolio website url</a> comes here &copy; 201(X). All Rights Reserved.
+            <footer>Copyright to <a href="#">name</a> or <a href="#">portfolio website url</a> comes here &copy; 20(XX). All Rights Reserved.
             </footer>
         </main>
     </body>
